--- a/css/master.css
+++ b/css/master.css
@@ -1021,14 +1021,12 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
   .pc_list > div,
   .tablet_list > img,
   .tablet_list > div,
-  .mobile_list_min > img,
-  .mobile_list_min > div,
+  .mobile_list > img,
+  .mobile_list > div,
   .answer_normal {
     display: none;
   }
   .bg_mobile,
-  .mobile_list > img,
-  .mobile_list > div,
   .answer_mobile,
   .nav_logo {
     display : visible;
@@ -1132,7 +1130,197 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
     line-height: 20px;
   }
 
+
+
+
+
+
+
   /* SECTION2 PROJECTS */
+  #portfolio > .wrap_align > .brandlist {
+    position: absolute;
+    top: 55%;
+    transform: translateY(-50%);
+    margin: 0 10px;
+  }
+  #portfolio > .wrap_align > .brandlist > ul > li {
+    display: inline-block;
+    padding: 0 5px;
+    margin-top: 10%;
+  }
+  #portfolio > .wrap_align > .brandlist > ul > li > a {
+    width: 140px;
+    height: 50px;
+  }
+  h3.brandname {
+    margin-top: 0;
+    font-size: 12px;
+    line-height: 50px;
+    border-radius: 50px;
+    border: 1px solid #fff;
+  }
+  #portfolio > .wrap_align > .brandlist > ul > li > a:hover > h3 {
+    background-color: #8081d9;
+    color: #fff;
+    transition-duration: 0.3s;
+    border: 1px solid #8081d9;
+  }
+
+  /***** 크리스피크림 *****/
+  #krispykreme > img {
+    opacity: 0;
+    transition-duration: 0.4s;
+  }
+  #krispykreme > img:hover {
+    opacity: 1;
+  }
+  #krispykreme > .krispykremebg_m {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: url(../images/krispykreme_m_min.png);
+    margin-top: -100px;
+  }
+
+  /* SECTION3 ABOUT ME */
+  #profile > img {
+    width: 100px;
+    height: 100px;
+  }
+  .floating1 {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    margin-left: -50px;
+  }
+  #me > .wrap_align > .profile_wrap{
+    position: relative;
+    height: 100%;
+    margin: 0;
+  }
+  #me > .wrap_align > .profile_wrap > .info {
+    position: absolute;
+    top: 41%;
+    left: 20px;
+    font-size: 12px;
+  }
+  #me > .wrap_align > .profile_wrap > .info > ul.answer {
+    position: absolute;
+    left: 103px;
+    top: 0;
+    text-align: left;
+    width: 220px;
+  }
+  #me > .wrap_align > .profile_wrap > .info > ul.answer > li {
+    padding: 5px 0;
+    line-height: 20px;
+  }
+  #me > .wrap_align > .profile_wrap > .info > ul.question > li {
+    padding: 5px 0;
+    line-height: 20px;
+  }
+  #me > .wrap_align > .profile_wrap > .info > ul.question > li:nth-child(4) {
+    margin-top: 40px;
+  }
+  #me > .wrap_align > .profile_wrap > .info > ul.question > li:last-child {
+    margin-top: 80px;
+  }
+
+  /* SECTION4 ART WORKS */
+  #artwork > .wrap_align > .artlist > li > a > div {
+    width: 130px;
+    height: 130px;
+  }
+  .artlist > li > a > div > img {
+    width: 130px;
+  }
+  #project > a > h2,
+  #graphic > a > h2,
+  #drawing > a > h2,
+  #photography > a > h2 {
+    margin-top: 20px;
+    font-size: 14px;
+  }
+  #artwork > .wrap_align > ul.artlist > li {
+    display: inline-block;
+    padding: 0 5px;
+    margin-top: 30px;
+  }
+
+  /* SECTION5 CONTACT */
+  #contact > .wrap_align > .address > h2 {
+    font-size: 30px;
+    margin-top: 14%;
+    letter-spacing: 3px;
+  }
+  #contact > .wrap_align > .address > p.first {
+    margin-top: 30px;
+    font-size: 13px;
+  }
+  #contact > .wrap_align > .address > p.second {
+    font-size: 13px;
+  }
+  #contact > .wrap_align > .address > ul.contactme {
+    margin-top: -204px;
+    margin-bottom: 200px;
+  }
+  #contact > .wrap_align > .address > ul.contactme > li {
+    font-size: 13px;
+    padding: 5px 0;
+  }
+  .circle {
+    width: 240px; height: 240px;
+    margin: 0 auto;
+    background: url(../images/contact_bg.png) no-repeat center;
+    background-size: 240px;
+    margin-top: 6%;
+  }
+  .footer {
+    width: 100%; height: 60px;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    background-color: #fff;
+    letter-spacing: 1px;
+  }
+  #contact > .wrap_align > .footer > #btntop {
+    position: absolute;
+    top: -40px;
+    left: 50%;
+    margin-left: -40px;
+  }
+  #contact > .wrap_align > .footer > #btntop > a {
+    width: 80px;
+    height: 80px;
+    background: url(../images/btn_top.png);
+    background-size: 80px;
+  }
+
+  /**** FOOTER ****/
+  #contact > .wrap_align > .footer {
+    width: 100%; height: 80px;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    background-color: #fff;
+    letter-spacing: 1px;
+  }
+  #contact > .wrap_align > .footer > .copyright {
+    font-size: 13px;
+    color: #6e6e6e;
+    padding-top: 0;
+    line-height: 80px;
+    margin-top: 7px;
+  }
+
+
+
+
+
+
+
+
+  /* SECTION2 PROJECTS
   #portfolio > .wrap_align > .brandlist {
     position: absolute;
     top: 55%;
@@ -1153,7 +1341,7 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
     font-size: 14px;
   }
   /***** 크리스피크림 *****/
-  #krispykreme > img {
+  /* #krispykreme > img {
     opacity: 0;
     transition-duration: 0.4s;
   }
@@ -1166,10 +1354,10 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
     border-radius: 50%;
     background: url(../images/krispykreme_m.png);
     margin-top: -120px;
-  }
+  } */
 
   /* SECTION3 ABOUT ME */
-  #profile > img {
+  /* #profile > img {
     width: 160px;
     height: 160px;
   }
@@ -1210,10 +1398,10 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
   }
   #me > .wrap_align > .profile_wrap > .info > ul.question > li:last-child {
     margin-top: 100px;
-  }
+  } */
 
   /* SECTION4 ART WORKS */
-  #artwork > .wrap_align > .artlist > li > a > div {
+  /* #artwork > .wrap_align > .artlist > li > a > div {
     width: 130px;
     height: 130px;
   }
@@ -1231,10 +1419,10 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
     display: inline-block;
     padding: 0 10px;
     margin-top: 50px;
-  }
+  } */
 
   /* SECTION5 CONTACT */
-  #contact > .wrap_align > .address > h2 {
+  /* #contact > .wrap_align > .address > h2 {
     font-size: 30px;
     margin-top: 100px;
     letter-spacing: 3px;
@@ -1278,7 +1466,17 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
     color: #6e6e6e;
     padding-top: 35px;
     z-index: 10;
-  }
+  } */
+
+
+
+
+
+
+
+
+
+
 }
 
 /* MOBILE-MIN */
