--- a/css/master.css
+++ b/css/master.css
@@ -1075,8 +1075,8 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
   /* GOMAIN */
   .myname {
     position: absolute;
-    top: 25px;
-    left: 25px;
+    top: 15px;
+    left: 15px;
     width: 80px; height: 80px;
     z-index: 300;
   }
@@ -1149,7 +1149,7 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
     margin-top: 10%;
   }
   #portfolio > .wrap_align > .brandlist > ul > li > a {
-    width: 140px;
+    width: 150px;
     height: 50px;
   }
   h3.brandname {
@@ -1214,6 +1214,7 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
   #me > .wrap_align > .profile_wrap > .info > ul.answer > li {
     padding: 5px 0;
     line-height: 20px;
+    min-width: 220px;
   }
   #me > .wrap_align > .profile_wrap > .info > ul.question > li {
     padding: 5px 0;
@@ -1686,6 +1687,7 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
   #me > .wrap_align > .profile_wrap > .info > ul.question > li {
     padding: 5px 0;
     line-height: 20px;
+    color: #8081d9;
   }
   #me > .wrap_align > .profile_wrap > .info > ul.question > li:nth-child(4) {
     margin-top: 40px;
@@ -1711,7 +1713,7 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
   }
   #artwork > .wrap_align > ul.artlist > li {
     display: inline-block;
-    padding: 0 5px;
+    padding: 0 1px;
     margin-top: 30px;
   }
 
@@ -1741,7 +1743,7 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
     margin: 0 auto;
     background: url(../images/contact_bg.png) no-repeat center;
     background-size: 240px;
-    margin-top: 6%;
+    margin-top: 10%;
   }
   .footer {
     width: 100%; height: 60px;
