--- a/css/master.css
+++ b/css/master.css
@@ -84,6 +84,16 @@ input#toggle:checked + #main_nav_wrap{
   right: 0;
   transition-duration: 0.3s;
 }
+
+
+
+#main_nav > li > h3 > a:checked + #main_nav_wrap {
+  position: fixed;
+  right: -100%; top: 0; bottom: 0;
+}
+
+
+
 ul#main_nav{
   width: 50%;
   background: #fff;
@@ -110,6 +120,17 @@ ul#main_nav > li > h3 {
   font-size: 24px;
   color: #8081d9;
   cursor: pointer;
+}
+ul#main_nav > li > h3 > button {
+  width: 100%;
+  height: 54px;
+  text-align: left;
+  color: #8081d9;
+  font-size: 24px;
+  cursor: pointer;
+}
+ul#main_nav > li:hover > h3 > button {
+  color: #717171;
 }
 ul#main_nav > li:hover > h3 {
   color: #717171;
@@ -998,7 +1019,7 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
   }
   /* NAV */
   ul#main_nav{
-    width: 100%;
+    width: 70%;
     background: #fff;
     position: absolute;
     right: 0;
@@ -1015,6 +1036,9 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
     font-size: 18px;
     color: #8081d9;
     cursor: pointer;
+  }
+  ul#main_nav > li > h3 > button {
+    font-size: 18px;
   }
   ul#main_nav > li.active > ul.sub_nav > li{
     height: 40px;
