--- a/css/master.css
+++ b/css/master.css
@@ -380,8 +380,6 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
 #artwork > .wrap_align > ul.artlist > li > a > div {
   transform: scale(1.0);
   margin: 0 auto;
-  width: 250px;
-  height: 250px;
 }
 #artwork > .wrap_align > ul.artlist > li > a:hover > div {
   transform: scale(1.05);
@@ -1080,16 +1078,17 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
   #portfolio > .wrap_align > .brandlist > ul > li {
     display: inline-block;
     padding: 0 5px;
-    margin-top: 10%;
+    margin-top: 12px;
+    width: 75%;
   }
   #portfolio > .wrap_align > .brandlist > ul > li > a {
-    width: 150px;
-    height: 50px;
+    width: 100%;
+    height: 45px;
   }
   h3.brandname {
     margin-top: 0;
-    font-size: 12px;
-    line-height: 50px;
+    font-size: 14px;
+    line-height: 45px;
     border-radius: 50px;
     border: 1px solid #fff;
     letter-spacing: 2px;
@@ -1161,16 +1160,21 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
   }
   /* SECTION4 ART WORKS */
   #artwork > .wrap_align > .artlist > li > a > div {
+    transform: scale(1.0);
+    margin: 0 auto;
     width: 130px;
+    height: 130px;
+  }
+  .artlist > li > a > div {
+    width: 130px;
+    margin: 0 auto;
     height: 130px;
   }
   .artlist > li > a > div > img {
     width: 130px;
+    margin: 0 auto;
   }
-  #project > a > h2,
-  #graphic > a > h2,
-  #drawing > a > h2,
-  #photography > a > h2 {
+  .artlist > li > a > h2 {
     margin-top: 20px;
     font-size: 14px;
     letter-spacing: 2px;
@@ -1180,6 +1184,7 @@ input#toggle:checked + #main_nav_wrap > label.btn_close{
     padding: 0 5px;
     margin-top: 30px;
   }
+
   /* SECTION5 CONTACT */
   #contact > .wrap_align > .address > h2 {
     font-size: 30px;
