--- a/css/sub_layout.css
+++ b/css/sub_layout.css
@@ -1198,6 +1198,7 @@ section {
     top: 15%;
     left: 50%;
     transform: translateX(-50%);
+    text-align: center;
   }
   #main > .contentswrap > .title > .logo {
     font-size: 35px;
@@ -1273,7 +1274,7 @@ section {
   #intro > .contentswrap > p {
     padding-top: 20px;
     color: #484848;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 24px;
   }
 
@@ -1331,7 +1332,7 @@ section {
   }
   #guide > .contentswrap > ul > li > h3 {
     color: #484848;
-    font-size: 18px;
+    font-size: 16px;
     padding-bottom: 12px;
   }
   #guide > .contentswrap > ul > li > img {
@@ -1349,7 +1350,7 @@ section {
 
   /** SECTION4 DETAIL IMG **/
   #detail > .contentswrap > img {
-    padding-top: 70px;
+    padding: 40px 0;
     margin: 0 auto;
     width: 95%;
   }
