--- a/css/sub_layout.css
+++ b/css/sub_layout.css
@@ -315,7 +315,7 @@ section {
   padding-top: 20px;
   color: #484848;
   font-size: 19px;
-  line-height: 24px;
+  line-height: 30px;
 }
 
 /** SECTION2 MEDIA QUERY **/
@@ -454,7 +454,7 @@ section {
 .footer > #btntop > a {
   width: 100px;
   height: 100px;
-  background: url(../images/btn_top_kkd.png);
+  background: url(../images/btn_top_kkd.png) no-repeat;
 }
 .footer > #btntop > a:hover {
   margin-top: -7px;
@@ -821,7 +821,7 @@ section {
   .footer > #btntop > a {
     width: 100px;
     height: 70px;
-    background: url(../images/btn_top_kkd.png);
+    background: url(../images/btn_top_kkd.png) no-repeat;
   }
   .footer > .copyright {
     font-size: 16px;
@@ -1386,10 +1386,18 @@ section {
 }
 
 
+/** Projects list **/
+/* STARBUCKS */
+
+#starbucks_body #media .contentswrap .go {
+  top: 180px;
+}
 
 
 
+/* #starbucks_body > #section_wrap > #intro > .contentswrap > h2 {
 
+} */
 
 
 
