--- a/css/sub_layout.css
+++ b/css/sub_layout.css
@@ -1017,21 +1017,23 @@ section {
   }
   #media > .contentswrap > img {
     width: 550px;
+    margin-top: 20px;
+    padding-bottom: 200px;
   }
   .go {
     position: absolute;
-    top: 113px;
-    right: 0;
+    top: 500px;
+    left: 0;
   }
   .go > .gosite > a,
   .go > .gomobile > a {
-    width: 150px;
+    width: 100%;
     height: 50px;
     background: #077451;
     text-align: center;
     line-height: 50px;
     color: #fff;
-    font-size: 15px;
+    font-size: 20px;
     border-radius: 25px;
     border: 1px solid transparent;
   }
@@ -1392,8 +1394,7 @@ section {
 
 /** Projects list **/
 
-
-/* STARBUCKS */
+/***** STARBUCKS *****/
 #starbucks_body #media .contentswrap .go {
   top: 180px;
 }
@@ -1401,13 +1402,12 @@ section {
 #starbucks_body #detail .contentswrap img {
   padding: 100px 0 70px 0;
 }
-
 #starbucks_body .footer {
   background-color: #2c2a29;
 }
-.footer > #btntop > a {
+#starbucks_body .footer #btntop a {
   width: 100px;
-  height: 100px;
+  height: 70px;
   background: url(../images/btn_top_starbucks.png) no-repeat;
 }
 
@@ -1419,271 +1419,402 @@ section {
     right: 0;
   }
 }
-
-/* #starbucks_body > #section_wrap > #intro > .contentswrap > h2 {
-
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/****** [s]BRAND URIAGE ******/
-#uriage_body > #main {
-  background: url(../images/main_uriage.png);
+/* TABLET 세로, MOBILE 가로 */
+@media screen and (min-width:600px) and (max-width:870px) {
+  #starbucks_body #media .contentswrap .go {
+    top: 500px;
+  }
+  #starbucks_body #media .contentswrap img {
+    padding-bottom: 150px;
+  }
+}
+/* MOBILE 세로 */
+@media screen and (min-width:50px) and (max-width:599px) {
+  #starbucks_body #media .contentswrap .go {
+    top: 0;
+  }
+  #starbucks_body #detail .contentswrap img {
+    padding-top: 30px;
+  }
 }
 
-/** SECTION1 INTRO **/
-    #uriage_body > #intro > .contentswrap > h2 {
-      color: #1da2dd;
-    }
-    #uriage_body > #intro > .contentswrap > h3 {
-      color: #1da2dd;
-    }
-
-/** SECTION2 MEDIA QUERY **/
-  #uriage_body > #media > .contentswrap > h3 {
-    color: #1da2dd;
-  }
-  #uriage_body > #media > .contentswrap > .go {
-    position: relative;
-    margin-top: -600px;
-        margin-right: 7px;
-  }
-    #uriage_body > #media > .contentswrap > .go > li {
-      padding: 5px 0;
-    }
-      #uriage_body > #media > .contentswrap > .go > .gosite > a,
-      #uriage_body > #media > .contentswrap > .go > .gomobile > a {
-        width: 210px;
-        height: 50px;
-        background: #1da2dd;
-        text-align: center;
-        line-height: 50px;
-        color: #fff;
-        font-size: 20px;
-        border-radius: 25px;
-        border: 1px solid transparent;
-      }
-      #uriage_body > #media > .contentswrap > .go > .gosite > a:hover,
-      #uriage_body > #media > .contentswrap > .go > .gomobile > a:hover {
-        color: #1da2dd;
-        background: #fff;
-        transition-duration: 0.4s;
-        border: 1px solid #1da2dd;
-      }
-
-/** SECTION3 DETAIL IMG **/
-    #uriage_body > #guide > .contentswrap > h3 {
-      color: #1da2dd;
-    }
-
-/** SECTION4 DETAIL IMG **/
-#uriage_body > #detail > .contentswrap > img:nth-of-type(2) {
-  width: 1300px;
-  margin: 0 auto;
-  padding-left: 0;
-  padding: 150px 0;
+/***** URIAGE *****/
+#uriage_body #intro .contentswrap h2,
+#uriage_body #intro .contentswrap h3,
+#uriage_body #media .contentswrap h3,
+#uriage_body #guide .contentswrap h3 {
+  color: #1da2dd;
 }
-
-/** FOOTER **/
-#uriage_body > .footer {
-  position: relative;
-  width: 100%; height: 100px;
-  text-align: center;
+#uriage_body #intro .contentswrap .summary li h3,
+#uriage_body #guide .contentswrap ul li h3 {
+  color: #484848;
+}
+#uriage_body #media .contentswrap .go .gosite a {
+  background: #1da2dd;
+}
+#uriage_body #media .contentswrap .go .gosite a:hover {
+  color: #1da2dd;
+  border: 1px solid #1da2dd;
+  background: #fff;
+}
+#uriage_body .footer {
   background-color: #1da2dd;
-  letter-spacing: 1px;
 }
-    #uriage_body > .footer > #btntop > a {
-      width: 100px;
-      height: 100px;
-      background: url(../images/btn_top_uriage.png);
-    }
-/****** [e]BRAND URIAGE ******/
-
-
-
-/****** [s]BRAND YUHAN ******/
-#yuhan_body > #main {
-  background: url(../images/main_yuhan.png);
+#uriage_body .footer #btntop a {
+  width: 100px;
+  height: 70px;
+  background: url(../images/btn_top_uriage.png) no-repeat;
 }
 
-/** SECTION1 INTRO **/
-    #yuhan_body > #intro > .contentswrap > h2 {
-      color: #865828;
-    }
-    #yuhan_body > #intro > .contentswrap > h3 {
-      color: #865828;
-    }
-
-/** SECTION2 MEDIA QUERY **/
-  #yuhan_body > #media > .contentswrap > h3 {
-    color: #865828;
+#uriage_body #media .contentswrap .go {
+  top: 230px;
+}
+#uriage_body #media .contentswrap .go .gosite a {
+  padding: 0 15px;
+}
+/* TABLET 가로 MIN */
+@media screen and (min-width:871px) and (max-width:1190px) {
+  #uriage_body #media .contentswrap .go {
+    top: 155px;
   }
-  #yuhan_body > #media > .contentswrap > .go {
-    position: relative;
-    margin-top: -600px;
-
+}
+/* TABLET 세로, MOBILE 가로 */
+@media screen and (min-width:600px) and (max-width:870px) {
+  #uriage_body #media .contentswrap .go {
+    top: 500px;
   }
-    #yuhan_body > #media > .contentswrap > .go > li {
-      padding: 5px 0;
-    }
-      #yuhan_body > #media > .contentswrap > .go > .gosite > a,
-      #yuhan_body > #media > .contentswrap > .go > .gomobile > a {
-        width: 210px;
-        height: 50px;
-        background: #865828;
-        text-align: center;
-        line-height: 50px;
-        color: #fff;
-        font-size: 20px;
-        border-radius: 25px;
-        border: 1px solid transparent;
-      }
-      #yuhan_body > #media > .contentswrap > .go > .gosite > a:hover,
-      #yuhan_body > #media > .contentswrap > .go > .gomobile > a:hover {
-        color: #865828;
-        background: #fff;
-        transition-duration: 0.4s;
-        border: 1px solid #865828;
-      }
-
-/** SECTION3 DETAIL IMG **/
-    #yuhan_body > #guide > .contentswrap > h3 {
-      color: #865828;
-    }
-
-/** SECTION4 DETAIL IMG **/
-#yuhan_body > #detail > .contentswrap > img:nth-of-type(1) {
-  margin-top: 50px;
-  margin: 0 auto;
-  padding-left: 250px;
-  padding-top: 100px;
-  width: 1200px;
+  #uriage_body #media .contentswrap img {
+    padding-bottom: 150px;
+  }
 }
-#yuhan_body > #detail > .contentswrap > img:nth-of-type(2) {
-  width: 1000px;
-  margin: 0 auto;
-  padding-left: 0;
-  padding: 150px 0;
+/* MOBILE 세로 */
+@media screen and (min-width:50px) and (max-width:599px) {
+  #uriage_body #media .contentswrap .go {
+    top: 0;
+  }
+  #uriage_body #detail .contentswrap img {
+    padding-top: 30px;
+  }
 }
 
-/** FOOTER **/
-#yuhan_body > .footer {
-  position: relative;
-  width: 100%; height: 100px;
-  text-align: center;
+/***** YUHAN *****/
+#yuhan_body #intro .contentswrap h2,
+#yuhan_body #intro .contentswrap h3,
+#yuhan_body #media .contentswrap h3,
+#yuhan_body #guide .contentswrap h3 {
+  color: #865828;
+}
+#yuhan_body #intro .contentswrap .summary li h3,
+#yuhan_body #guide .contentswrap ul li h3 {
+  color: #484848;
+}
+#yuhan_body #media .contentswrap .go .gosite a {
+  background: #865828;
+}
+#yuhan_body #media .contentswrap .go .gosite a:hover {
+  color: #865828;
+  border: 1px solid #865828;
+  background: #fff;
+}
+#yuhan_body .footer {
   background-color: #865828;
-  letter-spacing: 1px;
 }
-    #yuhan_body > .footer > #btntop > a {
-      width: 100px;
-      height: 100px;
-      background: url(../images/btn_top_yuhan.png);
-    }
-/****** [e]BRAND YUHAN ******/
-
-
-/****** [s]BRAND CAFECHA ******/
-#cafecha_body > #main {
-  background: url(../images/main_cafecha.png);
+#yuhan_body .footer #btntop a {
+  width: 100px;
+  height: 70px;
+  background: url(../images/btn_top_yuhan.png) no-repeat;
 }
 
-/** SECTION1 INTRO **/
-    #cafecha_body > #intro > .contentswrap > h2 {
-      color: #d67f1a;
-    }
-    #cafecha_body > #intro > .contentswrap > h3 {
-      color: #d67f1a;
-    }
-
-/** SECTION2 MEDIA QUERY **/
-  #cafecha_body > #media > .contentswrap > h3 {
-    color: #d67f1a;
+#yuhan_body #media .contentswrap .go {
+  top: 180px;
+}
+/* TABLET 가로 MIN */
+@media screen and (min-width:871px) and (max-width:1190px) {
+  #yuhan_body #media .contentswrap .go {
+    top: 100px;
   }
-  #cafecha_body > #media > .contentswrap > .go {
-    position: relative;
-    margin-top: -600px;
-        margin-right: 7px;
-
-  }
-    #cafecha_body > #media > .contentswrap > .go > li {
-      padding: 5px 0;
-    }
-      #cafecha_body > #media > .contentswrap > .go > .gosite > a,
-      #cafecha_body > #media > .contentswrap > .go > .gomobile > a {
-        width: 210px;
-        height: 50px;
-        background: #d67f1a;
-        text-align: center;
-        line-height: 50px;
-        color: #fff;
-        font-size: 20px;
-        border-radius: 25px;
-        border: 1px solid transparent;
-      }
-      #cafecha_body > #media > .contentswrap > .go > .gosite > a:hover,
-      #cafecha_body > #media > .contentswrap > .go > .gomobile > a:hover {
-        color: #d67f1a;
-        background: #fff;
-        transition-duration: 0.4s;
-        border: 1px solid #d67f1a;
-      }
-
-/** SECTION3 DETAIL IMG **/
-    #cafecha_body > #guide > .contentswrap > h3 {
-      color: #d67f1a;
-    }
-
-        /** SECTION4 DETAIL IMG **/
-        #cafecha_body > #detail > .contentswrap > img:nth-of-type(1) {
-            margin-top: 50px;
-            margin: 0 auto;
-            padding-left: 250px;
-            padding-top: 100px;
-            width: 1200px;
-            padding-bottom: 150px;
-        }
-        #cafecha_body > #detail > .contentswrap > img:nth-of-type(2) {
-            width: 1000px;
-            margin: 0 auto;
-            padding-left: 0;
-            padding: 150px 0;
-        }
-
-/** FOOTER **/
-#cafecha_body > .footer {
-  position: relative;
-  width: 100%; height: 100px;
-  text-align: center;
-  background-color: #d67f1a;
-  letter-spacing: 1px;
 }
-    #cafecha_body > .footer > #btntop > a {
-      width: 100px;
-      height: 100px;
-      background: url(../images/btn_top_cafecha.png);
-    }
+/* TABLET 세로, MOBILE 가로 */
+@media screen and (min-width:600px) and (max-width:870px) {
+  #yuhan_body #media .contentswrap .go {
+    top: 500px;
+  }
+  #yuhan_body #media .contentswrap img {
+    padding-bottom: 150px;
+  }
+}
+/* MOBILE 세로 */
+@media screen and (min-width:50px) and (max-width:599px) {
+  #yuhan_body #media .contentswrap .go {
+    top: 0;
+  }
+  #yuhan_body #detail .contentswrap img {
+    padding-top: 30px;
+  }
+}
 
-/****** [e]BRAND CAFECHA ******/
+/***** TWOSOME *****/
+#twosome_body #intro .contentswrap h2,
+#twosome_body #intro .contentswrap h3,
+#twosome_body #media .contentswrap h3,
+#twosome_body #guide .contentswrap h3 {
+  color: #a9202a;
+}
+#twosome_body #intro .contentswrap .summary li h3,
+#twosome_body #guide .contentswrap ul li h3 {
+  color: #484848;
+}
+#twosome_body #media .contentswrap .go .gosite a {
+  background: #a9202a;
+}
+#twosome_body #media .contentswrap .go .gosite a:hover {
+  color: #a9202a;
+  border: 1px solid #a9202a;
+  background: #fff;
+}
+#twosome_body .footer {
+  background-color: #a9202a;
+}
+#twosome_body .footer #btntop a {
+  width: 100px;
+  height: 70px;
+  background: url(../images/btn_top_twosome.png) no-repeat;
+}
+
+#twosome_body #media .contentswrap img {
+  width: 40%;
+  margin: 0 auto;
+  margin-top: -40px;
+}
+#twosome_body #media .contentswrap h3 {
+  padding-bottom: 0;
+}
+#twosome_body #detail .contentswrap img {
+  padding: 100px 0;
+  width: 85%;
+  margin: 0 auto;
+}
+
+#twosome_body #media .contentswrap .go {
+  top: 180px;
+}
+/* TABLET 가로 MIN */
+@media screen and (min-width:871px) and (max-width:1190px) {
+  #twosome_body #media .contentswrap .go {
+    top: 100px;
+  }
+}
+/* TABLET 세로, MOBILE 가로 */
+@media screen and (min-width:600px) and (max-width:870px) {
+  #twosome_body #media .contentswrap .go {
+    top: 85%;
+  }
+  #twosome_body #media .contentswrap img {
+    margin-top: 50px;
+    padding-bottom: 150px;
+    width: 100%;
+  }
+  #twosome_body #media .contentswrap .media_query {
+    top: 110px;
+    left: 0;
+  }
+  #twosome_body #media .contentswrap .media_query li {
+    font-size: 18px;
+  }
+}
+/* MOBILE 세로 */
+@media screen and (min-width:50px) and (max-width:599px) {
+  #twosome_body #media .contentswrap h3 {
+    padding-bottom: 40px;
+  }
+  #twosome_body #media .contentswrap img {
+    width: 100%;
+  }
+  #twosome_body #media .contentswrap .go {
+    top: 0;
+  }
+  #twosome_body #detail .contentswrap img {
+    padding-top: 30px;
+  }
+}
+
+/***** DONGA *****/
+#donga_body #intro .contentswrap h2,
+#donga_body #intro .contentswrap h3,
+#donga_body #media .contentswrap h3,
+#donga_body #guide .contentswrap h3 {
+  color: #00a0c9;
+}
+#donga_body #intro .contentswrap .summary li h3,
+#donga_body #guide .contentswrap ul li h3 {
+  color: #484848;
+}
+#donga_body #media .contentswrap .go .gosite a {
+  background: #00a0c9;
+}
+#donga_body #media .contentswrap .go .gosite a:hover {
+  color: #00a0c9;
+  border: 1px solid #00a0c9;
+  background: #fff;
+}
+#donga_body .footer {
+  background-color: #00a0c9;
+}
+#donga_body .footer #btntop a {
+  width: 100px;
+  height: 70px;
+  background: url(../images/btn_top_donga.png) no-repeat;
+}
+
+#donga_body #media .contentswrap .go {
+  top: 230px;
+}
+#donga_body #media .contentswrap .go .gosite a {
+  padding: 0 15px;
+}
+/* TABLET 가로 MIN */
+@media screen and (min-width:871px) and (max-width:1190px) {
+  #donga_body #media .contentswrap .go {
+    top: 155px;
+  }
+}
+/* TABLET 세로, MOBILE 가로 */
+@media screen and (min-width:600px) and (max-width:870px) {
+  #donga_body #media .contentswrap .go {
+    top: 500px;
+  }
+  #donga_body #media .contentswrap img {
+    padding-bottom: 150px;
+  }
+}
+/* MOBILE 세로 */
+@media screen and (min-width:50px) and (max-width:599px) {
+  #donga_body #media .contentswrap .go {
+    top: 0;
+  }
+  #donga_body #detail .contentswrap img {
+    padding-top: 30px;
+  }
+}
+
+/***** DONGBU *****/
+#dongbu_body #intro .contentswrap h2,
+#dongbu_body #intro .contentswrap h3,
+#dongbu_body #media .contentswrap h3,
+#dongbu_body #guide .contentswrap h3 {
+  color: #00a88e;
+}
+#dongbu_body #intro .contentswrap .summary li h3,
+#dongbu_body #guide .contentswrap ul li h3 {
+  color: #484848;
+}
+#dongbu_body #media .contentswrap .go .gosite a {
+  background: #00a88e;
+}
+#dongbu_body #media .contentswrap .go .gosite a:hover {
+  color: #00a88e;
+  border: 1px solid #00a88e;
+  background: #fff;
+}
+#dongbu_body #guide {
+  padding-bottom: 100px;
+}
+#dongbu_body .footer {
+  background-color: #00a88e;
+}
+#dongbu_body .footer #btntop a {
+  width: 100px;
+  height: 70px;
+  background: url(../images/btn_top_dongbu.png) no-repeat;
+}
+
+#dongbu_body #media .contentswrap .go {
+  top: 180px;
+}
+/* TABLET 가로 MIN */
+@media screen and (min-width:871px) and (max-width:1190px) {
+  #dongbu_body #media .contentswrap .go {
+    top: 100px;
+  }
+}
+/* TABLET 세로, MOBILE 가로 */
+@media screen and (min-width:600px) and (max-width:870px) {
+  #dongbu_body #media .contentswrap .go {
+    top: 500px;
+  }
+  #dongbu_body #media .contentswrap img {
+    padding-bottom: 150px;
+  }
+}
+/* MOBILE 세로 */
+@media screen and (min-width:50px) and (max-width:599px) {
+  #dongbu_body #media .contentswrap .go {
+    top: 0;
+  }
+  #dongbu_body #detail .contentswrap img {
+    padding-top: 30px;
+  }
+}
+
+/***** OVERWATCH *****/
+#overwatch_body #intro .contentswrap h2,
+#overwatch_body #intro .contentswrap h3,
+#overwatch_body #media .contentswrap h3,
+#overwatch_body #guide .contentswrap h3 {
+  color: #e48f03;
+}
+#overwatch_body #intro .contentswrap .summary li h3,
+#overwatch_body #guide .contentswrap ul li h3 {
+  color: #484848;
+}
+#overwatch_body #media .contentswrap .go .gosite a {
+  background: #e48f03;
+}
+#overwatch_body #media .contentswrap .go .gosite a:hover {
+  color: #e48f03;
+  border: 1px solid #e48f03;
+  background: #fff;
+}
+#overwatch_body #media {
+  padding-bottom: 100px;
+}
+#overwatch_body .footer {
+  background-color: #e48f03;
+}
+#overwatch_body .footer #btntop a {
+  width: 100px;
+  height: 70px;
+  background: url(../images/btn_top_overwatch.png) no-repeat;
+}
+
+#overwatch_body #media .contentswrap .go {
+  top: 230px;
+}
+#overwatch_body #media .contentswrap .go .gosite a {
+  padding: 0 15px;
+}
+/* TABLET 가로 MIN */
+@media screen and (min-width:871px) and (max-width:1190px) {
+  #overwatch_body #media .contentswrap .go {
+    top: 155px;
+  }
+}
+/* TABLET 세로, MOBILE 가로 */
+@media screen and (min-width:600px) and (max-width:870px) {
+  #overwatch_body #media .contentswrap .go {
+    top: 500px;
+  }
+  #overwatch_body #media .contentswrap img {
+    padding-bottom: 150px;
+  }
+}
+/* MOBILE 세로 */
+@media screen and (min-width:50px) and (max-width:599px) {
+  #overwatch_body #media .contentswrap .go {
+    top: 0;
+  }
+  #overwatch_body #detail .contentswrap img {
+    padding-top: 30px;
+  }
+}
+
