--- a/css/sub_layout.css
+++ b/css/sub_layout.css
@@ -5,6 +5,21 @@
 body {
   letter-spacing: 1px;
 }
+/* .back-to-position {
+  opacity: 0;
+  transition: 1s;
+}
+.back-to-position.to-right {
+  transform: translateX(-150px);
+}
+.back-to-position.to-left {
+  transform: translateX(150px);
+}
+.show .back-to-position {
+  opacity: 1;
+  transform: translateX(0);
+} */
+
 
 /** GO HOME **/
 .myname {
