--- a/css/sub_layout.css
+++ b/css/sub_layout.css
@@ -5,7 +5,7 @@
 body {
   letter-spacing: 1px;
 }
-/* .back-to-position {
+.back-to-position {
   opacity: 0;
   transition: 1s;
 }
@@ -15,11 +15,32 @@ body {
 .back-to-position.to-left {
   transform: translateX(150px);
 }
+.back-to-position.to-bottom {
+  transform: translateY(-150px);
+}
 .show .back-to-position {
   opacity: 1;
   transform: translateX(0);
-} */
-
+  transform: translateY(0);
+}
+.show .back-to-position.delay-0 {
+  transition-delay: 0;
+}
+.show .back-to-position.delay-1 {
+  transition-delay: .1s;
+}
+.show .back-to-position.delay-2 {
+  transition-delay: .2s;
+}
+.show .back-to-position.delay-3 {
+  transition-delay: .3s;
+}
+.show .back-to-position.delay-4 {
+  transition-delay: .4s;
+}
+.show .back-to-position.delay-5 {
+  transition-delay: .5s;
+}
 
 /** GO HOME **/
 .myname {
