--- a/css/sub_layout.css
+++ b/css/sub_layout.css
@@ -2,6 +2,11 @@
 
 @import url( common.css);
 
+/* 모바일 수평 스크롤 */
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 body {
   letter-spacing: 1px;
 }
